# geoforge-studio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  mkdocs.yml  pyproject.toml  requirements.txt  smoke_test.py  test_crs.py  test_csv_export.py  test_cut_fill.py  test_geojson_export.py  test_help_service.py  test_structure.py  test_surface_export.py
.atl/: .skill-registry.cache.json  skill-registry.md
docs/: architecture.md  github-profile-draft.md  index.md  roadmap.md  vision.md
docs/stylesheets/: extra.css
fixtures/: README.md  sample.dxf  sample.kml  sample.kmz  sample.rinex
gnss-core/: Cargo.toml  pyproject.toml
gnss-core/src/: ephemeris.rs  lib.rs  ppk.rs  rinex.rs  types.rs
gnss-core/tests/: mod.rs
gnss-core/tests/fixtures/: mod.rs
openspec/: config.yaml
openspec/changes/geoforge-studio/: design.md  exploration.md  proposal.md  state.yaml  tasks.md
openspec/specs/dxf-import/: spec.md
openspec/specs/kmz-import/: spec.md
openspec/specs/map-visualization/: spec.md
openspec/specs/ppk-engine/: spec.md
openspec/specs/rinex-reader/: spec.md
openspec/specs/volume-tool/: spec.md
src/: __init__.py  main.py
src/exporters/: __init__.py  dxf_surface_exporter.py  geojson_exporter.py
src/importers/: dxf_importer.py  kmz_importer.py
src/services/: help_service.py  ppk_service.py  project_service.py
src/ui/: composer.py  composer_items.py  crs_utils.py  help_assistant.py  main_window.py  map_canvas.py  volume_panel.py
src/volume/: __init__.py  calculator.py  contour.py  csv_exporter.py  pdf_exporter.py  renderer.py  surface.py
