[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "geoforge-studio"
version = "0.1.0"
description = "GNSS processing and geospatial analysis tool with offline capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GeoForge Studio Team", email = "team@geoforge.studio"}
]
keywords = ["gnss", "ppk", "geospatial", "mapping", "volume", "surveying"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Geosciences",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
dependencies = [
    "pyqt6>=6.5.0",
    "pyproj>=3.6.0",
    "ezdxf>=1.0.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
geoforge = "src.main:main"

[tool.maturin]
module-name = "gnss_core"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = "py38"

[tool.isort]
profile = "black"
